<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.sign_up"-->

    <!--<com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintStart_toEndOf="@+id/userIDText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_signup"
            app:layout_constraintVertical_bias="0.461"/>-->

    <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:background="#ff6d1a"
            android:outlineAmbientShadowColor="#ff6d1a"
            android:text="Sign Up"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.411"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userid" />

    <TextView
            android:id="@+id/appName"
            android:layout_width="352dp"
            android:layout_height="136dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="27dp"
            android:layout_marginRight="27dp"
            android:layout_marginBottom="40dp"
            android:clickable="false"
            android:gravity="center"
            android:text="UniRide: Student Carpooling App"
            android:textColor="#ff6d1a"
            android:textSize="15pt"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/firstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/password_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:hint="Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.406"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
            android:id="@+id/userid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:hint="Facebook UserID"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.406"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_signup" />

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="380dp"
            android:layout_marginEnd="40dp"

            android:autofillHints=""
            android:hint="University Email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.411"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Address"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.411"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="First Name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.411"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName" />

    <EditText
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.411"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <!--<TextView
            android:id="@+id/userIDText"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginStart="40dp"
            android:text="Facebook UserID"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toStartOf="@+id/login_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_signup"
            app:layout_constraintVertical_bias="0.487" />-->

    <TextView
            android:id="@+id/textView"
            android:layout_width="169dp"
            android:layout_height="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Already have an account?"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/loginherebutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="1.0" />

    <TextView
            android:id="@+id/loginherebutton"
            android:layout_width="87dp"
            android:layout_height="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="117dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:text="Login here."
            android:textColor="#FF5722"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="1.0" />

    <TextView
            android:id="@+id/useridtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:text="Need help with Facebook UserID?"
            android:textColor="#FF5722"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userid"
            app:layout_constraintVertical_bias="0.625" /><![CDATA[

    "
    tools:layout_editor_absoluteX="32dp"
    tools:layout_editor_absoluteY="104dp" />
]]>
</androidx.constraintlayout.widget.ConstraintLayout>